29.mar (ws)
      - added jazz font and new style option "use jazz font" which gives some
        "real book feeling" for chord names. The implementation & font is currently
       incomplete (lot of symbols are missing).
28.mar (ws)
      - fixed: accidental after a tied note
      - fixed: crash when dropping treble clef over bass clef
27.mar (ws)
      - first code for new search function (Ctrl+F)
26.mar (tb)
      - adding Chinese (Traditional) locale
      - adding initial Swedish language update by Magnus Johansson
24.mar (ws)
      - playback fixes for tied notes
      - clear some fields in the new wizard on second call, especially the
        instrument list and title string
      - fix barlines for grand staff instruments
      - new experimental rendering implementation of chord names not using a qt
        text document object. This allows for adjusting of superscript size and
        position which is hardwired in qt text.
22.mar (ws)
      - chordnames now always change, when text style changes
      - fix crash during drum entry
      - in note entry mode backspace key is now mapped to "undo"
       (tb)
      - renaming cz locale to cs, based on http://musescore.org/en/node/1318
21.mar (lv)
      - MusicXML export of page layout
       (ws)
      - fix: delete instrument name
      - mark notes outside of the pitch range of an instrument in red. Mark notes
        only playable by professionals in yellow. The instruments definition file
        is extended for this feature with

            <aPitchRange>74-105</aPitchRange>   ("amateur pitch range")
            <pPitchRange>74-105</pPitchRange>   ("professional pitch range")

        New testfile is piccolo.mscz.

      - unroll tempomap to play repeats with right tempo
      - fix size of grace notes
20.mar (ws)
      - new command: "x" flips hairpin direction
      - more debugging for note entry with mouse: reduce number of possible input
        positions in some cases